completed data data_preprocessing

--- a/notebooks/data_processing/data_preprocessing.ipynb
+++ b/notebooks/data_processing/data_preprocessing.ipynb
@@ -391,6 +391,26 @@
     "# Process and save all files\n",
     "process_all_files(file_paths, save_paths)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ETH data for group project\n",
+    "import pandas as pd\n",
+    "\n",
+    "file_path = \"../../data/processed/minute/ethusd_processed.csv\"\n",
+    "data = pd.read_csv(file_path)\n",
+    "drop_columns = ['Log Return', '15min RV', '1H RV']\n",
+    "data.drop(columns=drop_columns, inplace=True)\n",
+    "data.dropna(subset=['1D RV', 'Daily Squared Returns'], inplace=True)\n",
+    "#rename columns\n",
+    "data.rename(columns={'1D RV': 'realized_variance', 'Daily Squared Returns': 'daily_squared_returns'}, inplace=True)\n",
+    "data.head()\n",
+    "data.to_csv(\"../../data/processed/minute/ethusd_group_project.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
