added LSTM model and some data preprocessing steps

--- a/notebooks/data_processing/data_preprocessing.ipynb
+++ b/notebooks/data_processing/data_preprocessing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,15 @@
     "# Calculate daily returns from the daily close price\n",
     "daily_data['daily_return'] = daily_data['close'].pct_change()\n",
     "#rename columns\n",
-    "daily_data.rename(columns={'1D RV': 'realized_variance'}, inplace=True)\n",
+    "daily_data.rename(columns={'1D RV': 'RV_d,t'}, inplace=True)\n",
+    "\n",
+    "daily_data['RV_w,t'] = daily_data['RV_d,t'].rolling(window=7).mean()  # 7-day rolling average\n",
+    "daily_data['RV_m,t'] = daily_data['RV_d,t'].rolling(window=30).mean()  # 30-day rolling average\n",
+    "\n",
+    "# Apply Log Transformation\n",
+    "daily_data['ln_RV_d,t'] = np.log(daily_data['RV_d,t'])\n",
+    "daily_data['ln_RV_w,t'] = np.log(daily_data['RV_w,t'])\n",
+    "daily_data['ln_RV_m,t'] = np.log(daily_data['RV_m,t'])\n",
     "daily_data.head()\n",
     "daily_data.to_csv(\"../../data/ethusd_group_project.csv\", index=True)\n",
     "\n"
@@ -71,6 +79,7 @@
     "def calculate_parkinson(data, window):\n",
     "    \"\"\"\n",
     "    Calculate Parkinson Volatility using high and low prices over a rolling window.\n",
+    "    Haven't found a use for this yet.\n",
     "    \n",
     "    Parameters:\n",
     "    - data: DataFrame with 'High' and 'Low' columns.\n",
@@ -84,6 +93,25 @@
     "        (np.log(data['High'] / data['Low']) ** 2).rolling(window=window).sum()\n",
     "    )\n",
     "    return parkinson_vol\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "data = pd.read_csv(\"../../data/ethusd_group_project.csv\")\n",
+    "\n"
    ]
   }
  ],
