--- a/notebooks/exploratory/eda.ipynb
+++ b/notebooks/exploratory/eda.ipynb
@@ -81,11 +81,46 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "# Define standard normal distribution\n",
+    "x = np.linspace(-0.1, 0.1, 1000)  # Range for normal distribution\n",
+    "y = norm.pdf(x, loc=0, scale=1)  # Standard normal PDF\n",
+    "\n",
+    "with sns.axes_style(\"darkgrid\"):\n",
+    "    fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(18,12))\n",
+    "\n",
+    "    axes[0][0].plot(df_eda.daily_return, color='blue')\n",
+    "    axes[0][0].set_title('Returns')\n",
+    "\n",
+    "    sns.histplot(data=df_eda, x=\"daily_return\", color='blue', ax=axes[0][1], stat='density')\n",
+    "    axes[0][1].plot(x, norm.pdf(x, np.mean(df_eda.daily_return), np.std(df_eda.daily_return)), \n",
+    "                color='red', linestyle='dashed', label='Fitted Normal')\n",
+    "    axes[0][1].set_title('Returns')\n",
+    "\n",
+    "    axes[1][0].plot(df.log_returns, color='green')\n",
+    "    axes[1][0].set_title('Log Returns')\n",
+    "\n",
+    "    sns.histplot(data=df_eda, x=\"log_returns\", color='green', ax=axes[1][1], stat='density')\n",
+    "    axes[1][1].plot(x, norm.pdf(x, np.mean(df_eda.log_returns), np.std(df_eda.log_returns)), \n",
+    "                color='red', linestyle='dashed', label='Fitted Normal')\n",
+    "    axes[1][1].set_title('Log Returns')\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    fig.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -99,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
