--- a/notebooks/exploratory/eda.ipynb
+++ b/notebooks/exploratory/eda.ipynb
@@ -90,6 +90,9 @@
    "source": [
     "from scipy.stats import norm\n",
     "\n",
+    "df_eda = df[['time', 'open', 'close', 'high', 'low', 'volume', 'daily_return', 'log_returns']].copy()\n",
+    "df_eda.dropna(inplace=True)\n",
+    "\n",
     "# Define standard normal distribution\n",
     "x = np.linspace(-0.1, 0.1, 1000)  # Range for normal distribution\n",
     "y = norm.pdf(x, loc=0, scale=1)  # Standard normal PDF\n",
