--- a/notebooks/models/GARCH.ipynb
+++ b/notebooks/models/GARCH.ipynb
@@ -553,14 +553,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimated Parameters: omega=0.000533, alpha=[0.1537673092729178, 0.06435415396206072, 0.023556212605589127], beta=[2.6730845060803973e-17, 9.136354336974134e-17]\n"
+      "Estimated Parameters: \n",
+      "omega=0.000533, \n",
+      "alpha=[0.1537673092729178, 0.06435415396206072, 0.023556212605589127], \n",
+      "beta=[2.6730845060803973e-17, 9.136354336974134e-17]\n"
      ]
     }
    ],
@@ -569,7 +572,7 @@
     "omega = params['omega']\n",
     "alpha = [params[f'alpha[{i+1}]'] for i in range(p)]\n",
     "beta = [params[f'beta[{i+1}]'] for i in range(q)]\n",
-    "print(f\"Estimated Parameters: omega={omega:.6f}, alpha={alpha}, beta={beta}\")"
+    "print(f\"Estimated Parameters: \\nomega={omega:.6f}, \\nalpha={alpha}, \\nbeta={beta}\")"
    ]
   },
   {
@@ -601,7 +604,7 @@
     "        new_variance += beta[i] * last_variances.iloc[-(1+i)]\n",
     "    predicted_volatility.append(new_variance)\n",
     "    # Update for next step\n",
-    "    last_variances = last_variances.shift(-1)  # Moves all values left\n",
+    "    last_variances = last_variances.shift(-1)\n",
     "    last_variances.iloc[-1] = new_variance\n",
     "    last_daily_returns = last_daily_returns.shift(-1)\n",
     "    last_daily_returns.iloc[-1] = r "
@@ -627,7 +630,7 @@
     "# Create a DataFrame for visualization\n",
     "df_pred = pd.DataFrame({'Predicted Volatility': predicted_volatility}, index=r_test.index)\n",
     "\n",
-    "# Plot the predicted volatility against the realized volatility on the validation set\n",
+    "# Plot the predicted volatility against the realized volatility on the test set\n",
     "plt.figure(figsize=(10, 5))\n",
     "df_pred['Predicted Volatility'].plot(label='Predicted Volatility')\n",
     "RV_test.plot(label='Realized Volatility', alpha=0.5)\n",
