Update RF to acount for FRED
Also updated the main dataset to include for FREDMD data, big update

--- a/notebooks/data_processing/data_preprocessing.ipynb
+++ b/notebooks/data_processing/data_preprocessing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ETHUSD Minute Data\n",
+    "# 1. ETHUSD Minute Data\n",
     "- Resampling into Daily Data\n",
     "- Daily RV\n",
     "- daily returns (pct change)"
@@ -12,36 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import os\n",
+    "import io\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "# Load the BTC/USD dataset\n",
-    "file_path =  \"../../data/raw/minute/ethusd.csv\"\n",
     "\n",
-    "save_path = \"../../data/processed/minute/ethusd.csv\"\n",
+    "# File path for ETH‑USD minute data\n",
+    "ethusd_file_path = \"../../data/raw/minute/ethusd.csv\"\n",
     "\n",
-    "data = pd.read_csv(file_path)\n",
+    "# Load the minute-level data\n",
+    "data = pd.read_csv(ethusd_file_path)\n",
     "\n",
-    "# Convert Unix Timestamp (milliseconds) to datetime\n",
+    "# Convert Unix Timestamp (milliseconds) to datetime (keeping it as a column)\n",
     "data['time'] = pd.to_datetime(data['time'], unit='ms')\n",
-    "data.set_index('time', inplace=True)\n",
-    "data.sort_index(inplace=True)\n",
     "\n",
-    "# Calculate intraday returns (log returns)\n",
+    "# Calculate intraday log returns\n",
     "data['Log Return'] = np.log(data['close'] / data['close'].shift(1))\n",
-    "# Remove rows with NaN returns (due to the shift operation)\n",
     "data.dropna(subset=['Log Return'], inplace=True)\n",
     "\n",
-    "# Calculate realized variance\n",
-    "rv_1d = data.resample('1D')['Log Return'].apply(lambda x: np.sum(x**2))\n",
+    "# Set 'time' as index temporarily to resample\n",
+    "data = data.set_index('time')\n",
     "\n",
+    "# Calculate daily realized variance from log returns\n",
+    "rv_1d = data['Log Return'].resample('1D').apply(lambda x: np.sum(x**2))\n",
     "\n",
-    "drop_columns = ['Log Return']\n",
-    "data.drop(columns=drop_columns, inplace=True)\n",
+    "# Aggregate minute data into daily data:\n",
     "daily_data = data.resample('1D').agg({\n",
     "    'open': 'first',        # First open price of the day\n",
     "    'close': 'last',        # Last close price of the day\n",
@@ -49,30 +53,33 @@
     "    'low': 'min',           # Lowest price of the day\n",
     "    'volume': 'sum',        # Total volume for the day\n",
     "})\n",
-    "daily_data['1D RV'] = rv_1d\n",
     "\n",
-    "# Drop any rows with NaN values (e.g., incomplete days)\n",
-    "daily_data.dropna(subset=['open', 'close', 'high', 'low', 'volume', '1D RV'], inplace=True)\n",
-    "# Calculate daily returns from the daily close price\n",
-    "daily_data['daily_return'] = daily_data['close'].pct_change()\n",
-    "#rename columns\n",
+    "# Add daily realized variance and rename the column\n",
+    "daily_data['1D RV'] = rv_1d\n",
     "daily_data.rename(columns={'1D RV': 'RV_d,t'}, inplace=True)\n",
     "\n",
-    "daily_data['RV_w,t'] = daily_data['RV_d,t'].rolling(window=7).mean()  # 7-day rolling average\n",
-    "daily_data['RV_m,t'] = daily_data['RV_d,t'].rolling(window=30).mean()  # 30-day rolling average\n",
+    "# Drop days with incomplete data\n",
+    "daily_data.dropna(subset=['open', 'close', 'high', 'low', 'volume', 'RV_d,t'], inplace=True)\n",
     "\n",
-    "# Apply Log Transformation\n",
+    "# Calculate daily returns from the daily close price\n",
+    "daily_data['daily_return'] = daily_data['close'].pct_change()\n",
+    "\n",
+    "# Compute rolling averages for realized variance: 7-day and 30-day\n",
+    "daily_data['RV_w,t'] = daily_data['RV_d,t'].rolling(window=7).mean()\n",
+    "daily_data['RV_m,t'] = daily_data['RV_d,t'].rolling(window=30).mean()\n",
+    "\n",
+    "# Apply logarithmic transformation to the realized variance measures\n",
     "daily_data['ln_RV_d,t'] = np.log(daily_data['RV_d,t'])\n",
     "daily_data['ln_RV_w,t'] = np.log(daily_data['RV_w,t'])\n",
     "daily_data['ln_RV_m,t'] = np.log(daily_data['RV_m,t'])\n",
-    "daily_data.head()\n",
-    "daily_data.to_csv(\"../../data/ethusd_group_project.csv\", index=True)\n",
-    "\n"
+    "\n",
+    "# Reset the index so that 'time' becomes a column again\n",
+    "daily_data = daily_data.reset_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +106,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 2. Fred MD data\n",
+    "We will be using the **PublicDataReader** package to pull Fred MD data. You will need to use the FRED API key which can be obtained [here](https://fredaccount.stlouisfed.org/apikey). Store the API key as a local variable using .env file\n",
+    "\n",
+    "## 2.1 Creating .env and pulling data\n",
+    "Uncomment the code and put it in the .env file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FRED_API=\"your_fred_api_key_here\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 Download the full dataset from Fred MD\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\young\\AppData\\Local\\Temp\\ipykernel_21600\\3429431674.py:23: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df[\"sasdate\"] = pd.to_datetime(df[\"sasdate\"], errors=\"coerce\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load API Key\n",
+    "load_dotenv()\n",
+    "api_key = os.getenv(\"FRED_API\")\n",
+    "\n",
+    "# Download the full dataset\n",
+    "fred_md_url = \"https://files.stlouisfed.org/files/htdocs/fred-md/monthly/current.csv\"\n",
+    "\n",
+    "response = requests.get(fred_md_url)\n",
+    "\n",
+    "# Need to use io.StringIO\n",
+    "df = pd.read_csv(io.StringIO(response.content.decode('utf-8')))\n",
+    "\n",
+    "# Too many white spaces in the column names\n",
+    "df.columns = df.columns.str.strip()\n",
+    "\n",
+    "# Convert 'sasdate' to datetime\n",
+    "df[\"sasdate\"] = pd.to_datetime(df[\"sasdate\"], errors=\"coerce\")\n",
+    "\n",
+    "# Remove the sasdate rows with NaT\n",
+    "df = df.dropna(subset=[\"sasdate\"])\n",
+    "\n",
+    "# Remove the sasdate rows that are not dates\n",
+    "df = df[df[\"sasdate\"].dt.year > 1960]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Merge the datasets and then save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daily_data['month_year'] = pd.to_datetime(daily_data['time']).dt.to_period('M')\n",
+    "df['month_year'] = df['sasdate'].dt.to_period('M')\n",
+    "\n",
+    "# Merge the data using the helper column 'month_year'\n",
+    "merged_data = pd.merge(daily_data, df, on='month_year', how='inner')\n",
+    "\n",
+    "# Drop the helper column 'month_year'\n",
+    "merged_data.drop(columns='month_year', inplace=True)\n",
+    "\n",
+    "# Drop sasdate column (Repeated with time column)\n",
+    "merged_data.drop(columns='sasdate', inplace=True)\n",
+    "\n",
+    "\n",
+    "# Save the merged data to a CSV file\n",
+    "merged_data.to_csv(\"../../data/ethusd_group_project.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Feature Engineering"
    ]
   },
@@ -110,8 +214,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "data = pd.read_csv(\"../../data/ethusd_group_project.csv\")\n",
-    "\n"
+    "data = pd.read_csv(\"../../data/ethusd_group_project.csv\")"
    ]
   }
  ],
