--- a/notebooks/data_processing/data_preprocessing.ipynb
+++ b/notebooks/data_processing/data_preprocessing.ipynb
@@ -203,24 +203,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Engineering"
+    "# Feature Selection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected 4 features: ['volume' 'CLF16OV' 'UEMPMEAN' 'AAAFFM']\n",
+      "✅ Feature selection complete! Saved dataset with important features.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "data = pd.read_csv(\"../../data/ethusd_group_project.csv\")"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "\n",
+    "# exclude warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "data = pd.read_csv(\"../../data/ethusd_group_project.csv\")\n",
+    "\n",
+    "data = data.dropna()\n",
+    "to_exclude = ['time', 'ln_RV_d,t', 'ln_RV_w,t', 'ln_RV_m,t', 'RV_d,t', 'RV_w,t', 'RV_m,t']\n",
+    "features = [col for col in data.columns if col not in to_exclude]  # Exclude time & target\n",
+    "X = data[features].values\n",
+    "y = data['ln_RV_d,t'].values  # Predicting next day's realized variance\n",
+    "\n",
+    "# 3️⃣ Standardize Features\n",
+    "scaler_X = StandardScaler()\n",
+    "scaler_y = StandardScaler()\n",
+    "X_scaled = scaler_X.fit_transform(X)\n",
+    "y_scaled = scaler_y.fit_transform(y.reshape(-1, 1)).flatten()\n",
+    "\n",
+    "# 4️⃣ Apply LASSO Regression with Cross-Validation\n",
+    "lasso = LassoCV(\n",
+    "    alphas=np.logspace(-5, 1, 50), \n",
+    "    cv=5, \n",
+    "    max_iter=10000,  \n",
+    "    tol=1e-4,  \n",
+    "    random_state=42\n",
+    ").fit(X_scaled, y_scaled)\n",
+    "\n",
+    "# 5️⃣ Select Important Features\n",
+    "selected_features = np.array(features)[lasso.coef_ != 0]  # Keep non-zero coefficients\n",
+    "print(f\"Selected {len(selected_features)} features: {selected_features}\")\n",
+    "\n",
+    "# 6️⃣ Create a New Dataset with Selected Features\n",
+    "data_selected = data[to_exclude + list(selected_features)]\n",
+    "data_selected.to_csv(\"../../data/ethusd_lasso_selected.csv\", index=False)\n",
+    "\n",
+    "print(\"✅ Feature selection complete! Saved dataset with important features.\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
