Updated plots using new data

--- a/notebooks/models/rf_har.ipynb
+++ b/notebooks/models/rf_har.ipynb
@@ -1152,7 +1152,7 @@
     "    new_observation.index = [date]\n",
     "    \n",
     "    # Append the new observation to X_train.\n",
-    "    X_train = pd.concat([X_train, new_observation])\n",
+    "    X_train = pd.concat([X_train, new_observation]) # Conc the test set obs instead\n",
     "    \n",
     "    # Update y_train:\n",
     "    if date in log_daily_rv.index:\n",
