update GARCH_rolling window

--- a/notebooks/models/GARCH.ipynb
+++ b/notebooks/models/GARCH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,11 +67,29 @@
        "      <th>RV_w,t</th>\n",
        "      <th>RV_m,t</th>\n",
        "      <th>ln_RV_d,t</th>\n",
-       "      <th>ln_RV_w,t</th>\n",
-       "      <th>ln_RV_m,t</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DNDGRG3M086SBEA</th>\n",
+       "      <th>DSERRG3M086SBEA</th>\n",
+       "      <th>CES0600000008</th>\n",
+       "      <th>CES2000000008</th>\n",
+       "      <th>CES3000000008</th>\n",
+       "      <th>UMCSENTx</th>\n",
+       "      <th>DTCOLNVHFNM</th>\n",
+       "      <th>DTCTHFNM</th>\n",
+       "      <th>INVEST</th>\n",
+       "      <th>VIXCLSx</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -99,8 +117,17 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-4.232581</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>97.74</td>\n",
+       "      <td>96.832</td>\n",
+       "      <td>22.36</td>\n",
+       "      <td>25.7</td>\n",
+       "      <td>20.27</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>298976.54</td>\n",
+       "      <td>732221.29</td>\n",
+       "      <td>3141.9415</td>\n",
+       "      <td>15.6595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-03-10</th>\n",
@@ -114,11 +141,21 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-5.610725</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>97.74</td>\n",
+       "      <td>96.832</td>\n",
+       "      <td>22.36</td>\n",
+       "      <td>25.7</td>\n",
+       "      <td>20.27</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>298976.54</td>\n",
+       "      <td>732221.29</td>\n",
+       "      <td>3141.9415</td>\n",
+       "      <td>15.6595</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2 rows × 138 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -127,13 +164,25 @@
        "2016-03-09  11.197  11.197  11.197  10.660  41.139523  0.014515           NaN   \n",
        "2016-03-10  11.072  11.750  11.850  11.072   1.030000  0.003658      0.049388   \n",
        "\n",
-       "            RV_w,t  RV_m,t  ln_RV_d,t  ln_RV_w,t  ln_RV_m,t  \n",
-       "time                                                         \n",
-       "2016-03-09     NaN     NaN  -4.232581        NaN        NaN  \n",
-       "2016-03-10     NaN     NaN  -5.610725        NaN        NaN  "
+       "            RV_w,t  RV_m,t  ln_RV_d,t  ...  DNDGRG3M086SBEA  DSERRG3M086SBEA  \\\n",
+       "time                                   ...                                     \n",
+       "2016-03-09     NaN     NaN  -4.232581  ...            97.74           96.832   \n",
+       "2016-03-10     NaN     NaN  -5.610725  ...            97.74           96.832   \n",
+       "\n",
+       "            CES0600000008  CES2000000008  CES3000000008  UMCSENTx  \\\n",
+       "time                                                                \n",
+       "2016-03-09          22.36           25.7          20.27      91.0   \n",
+       "2016-03-10          22.36           25.7          20.27      91.0   \n",
+       "\n",
+       "            DTCOLNVHFNM   DTCTHFNM     INVEST  VIXCLSx  \n",
+       "time                                                    \n",
+       "2016-03-09    298976.54  732221.29  3141.9415  15.6595  \n",
+       "2016-03-10    298976.54  732221.29  3141.9415  15.6595  \n",
+       "\n",
+       "[2 rows x 138 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
