--- a/notebooks/models/rf_har.ipynb
+++ b/notebooks/models/rf_har.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/lk/jtg57k7555qg6vh9z23sx18m0000gn/T/ipykernel_53566/1848045919.py:27: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/cx/mjdsxp6x367bkv2wc28scrt80000gn/T/ipykernel_13454/1848045919.py:27: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  data[[f'{col}_lag_1' for col in macro_vars]] = data[[f'{col}_lag_1' for col in macro_vars]].fillna(method='bfill')\n"
      ]
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,11 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_model = RandomForestRegressor(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "n_features = X_train.shape[1]\n",
+    "\n",
+    "rf_model = RandomForestRegressor(\n",
+    "    n_estimators=100,\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1,\n",
+    "    max_features=int(n_features/3)  \n",
+    ")\n",
     "\n",
     "if X_train.shape[0] == y_train.shape[0]:\n",
     "    rf_model.fit(X_train, y_train)\n",
@@ -201,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -870,17 +877,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔹 Mean Squared Error (MSE): 0.000001\n",
-      "🔹 Root Mean Squared Error (RMSE): 0.000952\n",
-      "🔹 Mean Absolute Percentage Error (MAPE): 24.425664%\n",
-      "🔹 R² Score: 0.835068\n"
+      "Mean Squared Error (MSE): 0.000001\n",
+      "Root Mean Squared Error (RMSE): 0.001004\n",
+      "Mean Absolute Percentage Error (MAPE): 23.848256%\n",
+      "R² Score: 0.816385\n"
      ]
     }
    ],
@@ -908,10 +915,10 @@
     "r2 = r2_score(actual_rv, forecasts_series)\n",
     "\n",
     "# Print evaluation metrics\n",
-    "print(f\"🔹 Mean Squared Error (MSE): {mse:.6f}\")\n",
-    "print(f\"🔹 Root Mean Squared Error (RMSE): {rmse:.6f}\")\n",
-    "print(f\"🔹 Mean Absolute Percentage Error (MAPE): {mape:.6%}\")\n",
-    "print(f\"🔹 R² Score: {r2:.6f}\")"
+    "print(f\"Mean Squared Error (MSE): {mse:.6f}\")\n",
+    "print(f\"Root Mean Squared Error (RMSE): {rmse:.6f}\")\n",
+    "print(f\"Mean Absolute Percentage Error (MAPE): {mape:.6%}\")\n",
+    "print(f\"R² Score: {r2:.6f}\")"
    ]
   },
   {
@@ -924,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -934,17 +941,17 @@
       "\n",
       "Feature Importances (impurity based):\n",
       "           Feature  Importance\n",
-      "0      ln_RV_d,t-1      0.5666\n",
-      "2      ln_RV_w,t-1      0.1747\n",
-      "3      ln_RV_w,t-2      0.0435\n",
-      "6     volume_lag_1      0.0429\n",
-      "1      ln_RV_d,t-2      0.0424\n",
-      "4      ln_RV_m,t-1      0.0306\n",
-      "5      ln_RV_m,t-2      0.0239\n",
-      "7     volume_lag_2      0.0232\n",
-      "9   UEMPMEAN_lag_1      0.0194\n",
-      "8    CLF16OV_lag_1      0.0177\n",
-      "10    AAAFFM_lag_1      0.0152\n"
+      "0      ln_RV_d,t-1      0.2378\n",
+      "2      ln_RV_w,t-1      0.2089\n",
+      "3      ln_RV_w,t-2      0.1418\n",
+      "1      ln_RV_d,t-2      0.0896\n",
+      "6     volume_lag_1      0.0845\n",
+      "4      ln_RV_m,t-1      0.0756\n",
+      "5      ln_RV_m,t-2      0.0480\n",
+      "8    CLF16OV_lag_1      0.0355\n",
+      "10    AAAFFM_lag_1      0.0299\n",
+      "7     volume_lag_2      0.0270\n",
+      "9   UEMPMEAN_lag_1      0.0214\n"
      ]
     }
    ],
@@ -1239,7 +1246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1253,7 +1260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
