--- a/notebooks/models/GARCH.ipynb
+++ b/notebooks/models/GARCH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[2 rows x 138 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "[2 rows x 138 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,15 +355,178 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
    "source": [
-    "### Train-Test Split"
+    "def find_missing_dates(df):\n",
+    "    if not isinstance(df.index, pd.DatetimeIndex):\n",
+    "        raise ValueError(\"The DataFrame index must be a DatetimeIndex.\")\n",
+    "    \n",
+    "    full_range = pd.date_range(start=df.index.min(), end=df.index.max(), freq='D')\n",
+    "    missing_dates = full_range.difference(df.index)\n",
+    "    \n",
+    "    return missing_dates\n",
+    "\n",
+    "missing_dates = find_missing_dates(df)\n",
+    "print(len(missing_dates))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Set: (1669, 30, 3) (1669,)\n",
+      "Validation Set: (417, 30, 3) (417,)\n",
+      "Test Set: (522, 30, 3) (522,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define features & target\n",
+    "\n",
+    "features = ['ln_RV_d,t', 'ln_RV_w,t', 'ln_RV_m,t']\n",
+    "target = 'ln_RV_d,t'  # Predicting next day's realized variance\n",
+    "\n",
+    "# Create Input Sequences for LSTM\n",
+    "def create_sequences(data, lookback=60):\n",
+    "    X, y = [], []\n",
+    "    for i in range(len(data) - lookback):\n",
+    "        X.append(data[i:i+lookback])  # Past 60 days as input\n",
+    "        y.append(data[i+lookback, 0])  # Predicting next day's realized variance\n",
+    "    return np.array(X), np.array(y)\n",
+    "\n",
+    "# Convert DataFrame to NumPy array for sequence creation\n",
+    "data_values = df[features].values\n",
+    "lookback = 30  # Use 60-day rolling window\n",
+    "\n",
+    "# Create sequences\n",
+    "X, y = create_sequences(data_values, lookback)\n",
+    "\n",
+    "# Train-Test Split\n",
+    "train_size = int(len(X) * 0.8)  # 80% train, 20% test\n",
+    "X_train, X_test = X[:train_size], X[train_size:]\n",
+    "y_train, y_test = y[:train_size], y[train_size:]\n",
+    "\n",
+    "scaler_X = StandardScaler()\n",
+    "scaler_y = StandardScaler()\n",
+    "\n",
+    "# Convert train data into correct shape\n",
+    "X_train = scaler_X.fit_transform(X_train.reshape(-1, X_train.shape[-1])).reshape(X_train.shape)\n",
+    "X_test = scaler_X.transform(X_test.reshape(-1, X_test.shape[-1])).reshape(X_test.shape)\n",
+    "y_train = scaler_y.fit_transform(y_train.reshape(-1, 1)).flatten() \n",
+    "y_test = scaler_y.transform(y_test.reshape(-1, 1)).flatten()\n",
+    "\n",
+    "# Further split training into training & validation (80% train, 20% validation)\n",
+    "val_size = int(len(X_train) * 0.2)  # 20% of training data\n",
+    "X_val, y_val = X_train[-val_size:], y_train[-val_size:]  # Last 20% for validation\n",
+    "X_train, y_train = X_train[:-val_size], y_train[:-val_size]  # Remaining for training\n",
+    "\n",
+    "print(\"Training Set:\", X_train.shape, y_train.shape)\n",
+    "print(\"Validation Set:\", X_val.shape, y_val.shape)\n",
+    "print(\"Test Set:\", X_test.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train-Test Split (without validation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Set: (2110,) (2110,)\n",
+      "Test Set: (528,) (528,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train-Test Split (80% train, 20% test)\n",
+    "# (log_return would be the input for GARCH models)\n",
+    "df['log_return'] = np.log(df['close'] / df['close'].shift(1))\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "train_size = int(0.8 * len(df))\n",
+    "r_train, r_test = df['log_return'][:train_size], df['log_return'][train_size:]\n",
+    "RV_train, RV_test = df['RV_d,t'][:train_size], df['RV_d,t'][train_size:]\n",
+    "\n",
+    "# Remove NaN values\n",
+    "r_train = r_train.dropna()\n",
+    "RV_train = RV_train.dropna()\n",
+    "train_size = len(r_train)\n",
+    "\n",
+    "print(\"Training Set:\", r_train.shape, RV_train.shape)\n",
+    "print(\"Test Set:\", r_test.shape, RV_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2022-04-27', '2022-04-28', '2022-04-29', '2022-04-30',\n",
+       "               '2022-05-01', '2022-05-02', '2022-05-03', '2022-05-04',\n",
+       "               '2022-05-05', '2022-05-06',\n",
+       "               ...\n",
+       "               '2023-09-29', '2023-09-30', '2023-10-01', '2023-10-02',\n",
+       "               '2023-10-03', '2023-10-04', '2023-10-05', '2023-10-06',\n",
+       "               '2023-10-07', '2023-10-08'],\n",
+       "              dtype='datetime64[ns]', name='time', length=528, freq=None)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_test.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train-Test Split (with validation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
