add modified garch

--- a/notebooks/models/GARCH - Copy.ipynb
+++ b/notebooks/models/GARCH - Copy.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
     "\n",
     "# Save Before Showing Plot\n",
     "plt.savefig(f'../../results/figures/garch-lstm_forecast_plot_{lookback}_lookback_1.png')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
