minor formatting of garch files

--- a/notebooks/models/GARCH - Copy.ipynb
+++ b/notebooks/models/GARCH - Copy.ipynb
@@ -81,9 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ r_t = \\mu + \\epsilon_t \\\\\n",
+    "$$ r_t = \\mu + \\epsilon_t \\\\\n",
     "\\epsilon_t = \\sigma_t e_t \\\\\n",
-    "\\sigma_t^2 = \\omega + \\alpha \\epsilon_{t-1}^2 + \\beta \\sigma_{t-1}^2$"
+    "\\sigma_t^2 = \\omega + \\alpha \\epsilon_{t-1}^2 + \\beta \\sigma_{t-1}^2$$"
    ]
   },
   {
