--- a/notebooks/models/GARCH.ipynb
+++ b/notebooks/models/GARCH.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
     "plt.show()\n",
     "\n",
     "# Save the results to a CSV file\n",
-    "df_pred.to_csv('../../results/models/GARCH_predictions.csv')"
+    "df_pred.to_csv('../../results/models/GARCH(4,1)_predictions.csv')"
    ]
   }
  ],
