Finsihed HAR model
Also done the EDA and preprocessing

--- a/notebooks/data_processing/data_import.ipynb
+++ b/notebooks/data_processing/data_import.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,30 +43,8 @@
     "\n",
     "# Remove rows where all price-related columns are NaN\n",
     "price_columns = ['Open', 'High', 'Low', 'Close', 'Volume']\n",
-    "combined_data.dropna(subset=price_columns, how='all', inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Clean the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate daily returns, cumulative returns, etc.\n",
-    "combined_data['hourly_return'] = combined_data.groupby('Ticker')['Close'].pct_change()\n",
-    "combined_data['cumulative_return'] = (1 + combined_data['hourly_return']).groupby(combined_data['Ticker']).cumprod()\n",
-    "combined_data['hourly_log_return'] = combined_data.groupby('Ticker')['Close'].transform(lambda x: x.pct_change())\n",
-    "combined_data['realised_variance'] = combined_data.groupby('Ticker')['hourly_log_return'].transform(lambda x: (x**2).sum())\n",
-    "combined_data['lagged_realised_variance'] = combined_data.groupby('Ticker')['realised_variance'].shift(1)\n",
-    "\n",
-    "combined_data.to_csv('main_data.csv', index=False)\n"
+    "combined_data.dropna(subset=price_columns, how='all', inplace=True)\n",
+    "combined_data.to_csv('../../data/raw_data.csv', index=False)\n"
    ]
   }
  ],
